Mail Toaster Changes
  5.28 - Jul
       allow building qmail with no patches
       explicitly include a few more perl modules required by SpamAssassin

  5.27 - Jul 08, 2010
       style updates to Ezmlm.pm and fix test failures in t/Ezmlm.t
       maillogs fails more gracefully when the log files are unreadable
       POD doc cleanups
       fixed inverted regexp match that caused control/me to be set to the system
         hostname instead of toaster-watcher.conf configured value
       added URI to prereq list in Makefile.PL 
       skip rbl tests if client can't resolv bl.spamcop.net properly
       FreeBSD->is_port_installed does a better job of port detection when there
         are multiple ports with similar names (qmail, qmailanalog, etc)
       corrected whitespace related test error in get_list_of_rbls test
       added install_munin to toaster-watcher.conf
       fixed 'maillogs yesterday' report
       other minor cleanups for PBP and cleaner 'make test' results

  5.26 - Jun 31, 2010
       added php build and post-install config (php.ini) support for freebsd
       replaced inline squirrelmail config with local overrides
       added build and post-install config support for lighttpd
       added sqlite build option for roundcube when install_mysql = 0
       added t/01.syntax (syntax checks for bin/*, lib/*, cgi_files/ezmlm.cgi)
       renamed port_install to install_port (see DEVELOP)
       added munin install support and configuration
       updated t_setup -s mailtoaster target (from $util-> to $toaster->)
       cleaned up more debug and log messages
       changed API for cwd_source_dir, chown, extract_archive, get_url, is_readable,
         is_writable, check_pidfile, install_package
       changed some builtin chown calls to using $util->chown
       renamed util->file_get to util->get_url
       renamed util->file_archive to archive_file
       renamed util->pidfile_check to check_pidfile