@@ -61,7 +61,8 @@
 <pre>
 
    allow building qmail with no patches
-   explicitly include a few more perl modules required by SpamAssassin</pre>
+   explicitly include a few more perl modules required by SpamAssassin
+   automatically password protect isoqlog in apache vhost file</pre>
 <p>
 </p>
 <h2><a name="5_27___jul_08__2010">5.27 - Jul 08, 2010</a></h2>
