@@ -2,6 +2,7 @@ Mail Toaster Changes
   5.28 - Jul
        allow building qmail with no patches
        explicitly include a few more perl modules required by SpamAssassin
+       automatically password protect isoqlog in apache vhost file
 
   5.27 - Jul 08, 2010
        style updates to Ezmlm.pm and fix test failures in t/Ezmlm.t
